--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.30.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.4.1",
-    "lucide-react": "^0.554.0"
+    "lucide-react": "^0.554.0",
+    "socket.io-client": "4.7.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
